tests/ui/capture_trailing_tokens.stderr
error: unexpected tokens in `bind!` (expected `bind!(parser, target [, span_target])`)
 --> tests/ui/capture_trailing_tokens.rs:9:10
  |
9 |         y,
  |          ^
